# mandelbrot_wgpu

./: Cargo.toml  index-eb10b699fa9b1e17.css  index.html  index.scss  learn_wgpu-4d137ac2dfbc8ba2.js  learn_wgpu-4d137ac2dfbc8ba2_bg.wasm
.github/workflows/: pages.yaml  rust.yaml
shaders/: shader.wgsl
src/: app.rs  lib.rs
