[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "learn_wgpu_bin"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = "0.15"
winit = "0.28"
pollster = "0.2"
bytemuck = { version = "1.13", features = [ "derive" ] }
bracket-color = "0.8"
colorgrad = "0.6"
rand = "0.8"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
tracing-wasm = "0.2"
wgpu = { version = "0.15", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
astro-float = "0.6"